--- a/achatsCommuneDeStrasbourg.ipynb
+++ b/achatsCommuneDeStrasbourg.ipynb
@@ -18,10 +18,8 @@
    "outputs": [],
    "source": [
     "sxb = pd.read_csv('sxb.csv', sep=';')\n",
-    "\n",
-    "# Delete 'NaN' Rows\n",
-    "NullRows = sxb[sxb.isna().any(axis=1)]\n",
-    "sxb = sxb.dropna(how='all')\n"
+    "sxb = sxb.dropna(how='all')\n",
+    "pd.set_option(\"max_rows\", None)\n"
    ]
   },
   {
@@ -30,7 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option(\"max_rows\", None)\n",
     "sxb['MOIS'] = sxb['NOTIFICATION_DATE'].str[5:7].astype(int)\n",
     "sxb['MONTANT'] = pd.to_numeric(sxb['MONTANT'],errors='coerce')"
    ]
